--- a/src/output.css
+++ b/src/output.css
@@ -9,6 +9,7 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-600: oklch(57.7% 0.245 27.325);
+    --color-amber-600: oklch(66.6% 0.179 58.318);
     --color-blue-700: oklch(48.8% 0.243 264.376);
     --color-pink-500: oklch(65.6% 0.241 354.308);
     --color-pink-600: oklch(59.2% 0.249 0.584);
@@ -19,10 +20,8 @@
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-md: 28rem;
-    --container-lg: 32rem;
     --container-xl: 36rem;
     --container-4xl: 56rem;
-    --container-5xl: 64rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-base: 1rem;
@@ -208,38 +207,38 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .top-1 {
+    top: calc(var(--spacing) * 1);
+  }
+  .top-1\/2 {
+    top: calc(1/2 * 100%);
+  }
   .top-20 {
     top: calc(var(--spacing) * 20);
   }
+  .top-\[50\%\] {
+    top: 50%;
+  }
+  .right-2 {
+    right: calc(var(--spacing) * 2);
+  }
+  .-left-6 {
+    left: calc(var(--spacing) * -6);
+  }
   .left-0 {
     left: calc(var(--spacing) * 0);
+  }
+  .left-2 {
+    left: calc(var(--spacing) * 2);
+  }
+  .z-2 {
+    z-index: 2;
   }
   .z-10 {
     z-index: 10;
   }
   .z-50 {
     z-index: 50;
-  }
-  .container {
-    width: 100%;
-    @media (width >= 40rem) {
-      max-width: 40rem;
-    }
-    @media (width >= 48rem) {
-      max-width: 48rem;
-    }
-    @media (width >= 64rem) {
-      max-width: 64rem;
-    }
-    @media (width >= 80rem) {
-      max-width: 80rem;
-    }
-    @media (width >= 96rem) {
-      max-width: 96rem;
-    }
-  }
-  .m-3 {
-    margin: calc(var(--spacing) * 3);
   }
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
@@ -249,9 +248,6 @@
   }
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
-  }
-  .mb-4 {
-    margin-bottom: calc(var(--spacing) * 4);
   }
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
@@ -268,9 +264,6 @@
   .table {
     display: table;
   }
-  .h-4 {
-    height: calc(var(--spacing) * 4);
-  }
   .h-6 {
     height: calc(var(--spacing) * 6);
   }
@@ -280,38 +273,20 @@
   .h-10 {
     height: calc(var(--spacing) * 10);
   }
-  .h-\[21\] {
-    height: 21;
+  .h-\[46\] {
+    height: 46;
   }
-  .h-\[21px\] {
-    height: 21px;
-  }
-  .h-\[36px\] {
-    height: 36px;
-  }
-  .h-\[48p\] {
-    height: 48p;
-  }
-  .h-\[48px\] {
-    height: 48px;
-  }
-  .h-\[53\] {
-    height: 53;
-  }
-  .h-\[53px\] {
-    height: 53px;
+  .h-\[46px\] {
+    height: 46px;
   }
   .h-\[72px\] {
     height: 72px;
   }
-  .h-\[169px\] {
-    height: 169px;
+  .h-\[144\] {
+    height: 144;
   }
-  .h-\[269\] {
-    height: 269;
-  }
-  .h-\[269px\] {
-    height: 269px;
+  .h-\[144px\] {
+    height: 144px;
   }
   .h-full {
     height: 100%;
@@ -319,20 +294,14 @@
   .h-screen {
     height: 100vh;
   }
-  .w-2 {
-    width: calc(var(--spacing) * 2);
-  }
   .w-6 {
     width: calc(var(--spacing) * 6);
   }
-  .w-20 {
-    width: calc(var(--spacing) * 20);
+  .w-\[46\] {
+    width: 46;
   }
-  .w-21 {
-    width: calc(var(--spacing) * 21);
-  }
-  .w-24 {
-    width: calc(var(--spacing) * 24);
+  .w-\[46px\] {
+    width: 46px;
   }
   .w-\[70px\] {
     width: 70px;
@@ -340,38 +309,23 @@
   .w-\[95px\] {
     width: 95px;
   }
-  .w-\[165\] {
-    width: 165;
+  .w-\[144\] {
+    width: 144;
   }
-  .w-\[165px\] {
-    width: 165px;
+  .w-\[144px\] {
+    width: 144px;
   }
-  .w-\[378\.5\] {
-    width: 378.5;
+  .w-\[cal\(\)\] {
+    width: cal();
   }
-  .w-\[378\.5px\] {
-    width: 378.5px;
+  .w-\[cal\(100\)\] {
+    width: cal(100);
   }
-  .w-\[459\] {
-    width: 459;
+  .w-\[cal\(100\/3\)\] {
+    width: cal(100/3);
   }
-  .w-\[459px\] {
-    width: 459px;
-  }
-  .w-\[1280\] {
-    width: 1280;
-  }
-  .w-\[1280px\] {
-    width: 1280px;
-  }
-  .w-\[1440\] {
-    width: 1440;
-  }
-  .w-\[1440px\] {
-    width: 1440px;
-  }
-  .w-fit {
-    width: fit-content;
+  .w-\[cal\] {
+    width: cal;
   }
   .w-full {
     width: 100%;
@@ -379,23 +333,11 @@
   .max-w-4xl {
     max-width: var(--container-4xl);
   }
-  .max-w-\[768\] {
-    max-width: 768;
-  }
   .max-w-\[768px\] {
     max-width: 768px;
   }
   .max-w-\[1280px\] {
     max-width: 1280px;
-  }
-  .max-w-\[1312px\] {
-    max-width: 1312px;
-  }
-  .max-w-\[1440\] {
-    max-width: 1440;
-  }
-  .max-w-\[1440px\] {
-    max-width: 1440px;
   }
   .max-w-md {
     max-width: var(--container-md);
@@ -405,6 +347,25 @@
   }
   .border-collapse {
     border-collapse: collapse;
+  }
+  .-translate-y-1 {
+    --tw-translate-y: calc(var(--spacing) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-1\/2 {
+    --tw-translate-y: calc(calc(1/2 * 100%) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-y-\[50\%\] {
+    --tw-translate-y: 50%;
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-y-\[50\] {
+    --tw-translate-y: 50;
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .cursor-pointer {
+    cursor: pointer;
   }
   .resize {
     resize: both;
@@ -418,12 +379,6 @@
   .flex-row {
     flex-direction: row;
   }
-  .flex-row-reverse {
-    flex-direction: row-reverse;
-  }
-  .flex-wrap {
-    flex-wrap: wrap;
-  }
   .items-center {
     align-items: center;
   }
@@ -433,11 +388,8 @@
   .justify-center {
     justify-content: center;
   }
-  .justify-end {
-    justify-content: flex-end;
-  }
-  .gap-0 {
-    gap: calc(var(--spacing) * 0);
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
   }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
@@ -457,17 +409,32 @@
   .gap-8 {
     gap: calc(var(--spacing) * 8);
   }
+  .gap-9 {
+    gap: calc(var(--spacing) * 9);
+  }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
+  }
+  .gap-11 {
+    gap: calc(var(--spacing) * 11);
   }
   .gap-12 {
     gap: calc(var(--spacing) * 12);
   }
-  .gap-20 {
-    gap: calc(var(--spacing) * 20);
+  .overflow-hidden {
+    overflow: hidden;
   }
   .rounded {
     border-radius: 0.25rem;
+  }
+  .rounded-\[6\] {
+    border-radius: 6;
+  }
+  .rounded-\[50\%\] {
+    border-radius: 50%;
+  }
+  .rounded-\[50\] {
+    border-radius: 50;
   }
   .rounded-full {
     border-radius: calc(infinity * 1px);
@@ -479,17 +446,14 @@
   .border-black {
     border-color: var(--color-black);
   }
-  .border-gray-300 {
-    border-color: var(--color-gray-300);
+  .bg-\[\#fff\] {
+    background-color: #fff;
+  }
+  .bg-amber-600 {
+    background-color: var(--color-amber-600);
   }
   .bg-black {
     background-color: var(--color-black);
-  }
-  .bg-pink-500 {
-    background-color: var(--color-pink-500);
-  }
-  .bg-red-600 {
-    background-color: var(--color-red-600);
   }
   .bg-white {
     background-color: var(--color-white);
@@ -506,11 +470,11 @@
   .object-contain {
     object-fit: contain;
   }
+  .object-cover {
+    object-fit: cover;
+  }
   .p-3 {
     padding: calc(var(--spacing) * 3);
-  }
-  .p-4 {
-    padding: calc(var(--spacing) * 4);
   }
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
@@ -518,11 +482,11 @@
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
+  .px-5 {
+    padding-inline: calc(var(--spacing) * 5);
+  }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
-  }
-  .px-28 {
-    padding-inline: calc(var(--spacing) * 28);
   }
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
@@ -539,6 +503,12 @@
   .py-12 {
     padding-block: calc(var(--spacing) * 12);
   }
+  .py-14 {
+    padding-block: calc(var(--spacing) * 14);
+  }
+  .py-15 {
+    padding-block: calc(var(--spacing) * 15);
+  }
   .py-16 {
     padding-block: calc(var(--spacing) * 16);
   }
@@ -547,18 +517,6 @@
   }
   .text-center {
     text-align: center;
-  }
-  .font-\[Roboto\] {
-    font-family: Roboto;
-  }
-  .font-\[roo\] {
-    font-family: roo;
-  }
-  .font-mono {
-    font-family: var(--font-mono);
-  }
-  .font-serif {
-    font-family: var(--font-serif);
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -580,6 +538,10 @@
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
   }
+  .leading-12 {
+    --tw-leading: calc(var(--spacing) * 12);
+    line-height: calc(var(--spacing) * 12);
+  }
   .leading-tight {
     --tw-leading: var(--leading-tight);
     line-height: var(--leading-tight);
@@ -598,9 +560,6 @@
   }
   .text-black {
     color: var(--color-black);
-  }
-  .text-gray-700 {
-    color: var(--color-gray-700);
   }
   .text-white {
     color: var(--color-white);
@@ -628,24 +587,10 @@
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
-  .hover\:bg-blue-700 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-blue-700);
-      }
-    }
-  }
   .hover\:bg-gray-200 {
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-gray-200);
-      }
-    }
-  }
-  .hover\:bg-pink-600 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-pink-600);
       }
     }
   }
@@ -677,9 +622,24 @@
       height: calc(var(--spacing) * 12);
     }
   }
-  .md\:w-\[768\] {
+  .md\:h-\[300px\] {
     @media (width >= 48rem) {
-      width: 768;
+      height: 300px;
+    }
+  }
+  .md\:h-\[350px\] {
+    @media (width >= 48rem) {
+      height: 350px;
+    }
+  }
+  .md\:h-\[405\.3\] {
+    @media (width >= 48rem) {
+      height: 405.3;
+    }
+  }
+  .md\:h-\[405\.3px\] {
+    @media (width >= 48rem) {
+      height: 405.3px;
     }
   }
   .md\:w-\[768px\] {
@@ -737,6 +697,11 @@
       gap: calc(var(--spacing) * 6);
     }
   }
+  .md\:gap-8 {
+    @media (width >= 48rem) {
+      gap: calc(var(--spacing) * 8);
+    }
+  }
   .md\:gap-14 {
     @media (width >= 48rem) {
       gap: calc(var(--spacing) * 14);
@@ -757,6 +722,26 @@
       padding-inline: calc(var(--spacing) * 12);
     }
   }
+  .md\:px-14 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 14);
+    }
+  }
+  .md\:px-16 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 16);
+    }
+  }
+  .md\:py-12 {
+    @media (width >= 48rem) {
+      padding-block: calc(var(--spacing) * 12);
+    }
+  }
+  .md\:py-14 {
+    @media (width >= 48rem) {
+      padding-block: calc(var(--spacing) * 14);
+    }
+  }
   .md\:text-5xl {
     @media (width >= 48rem) {
       font-size: var(--text-5xl);
@@ -769,6 +754,21 @@
       line-height: var(--tw-leading, var(--text-base--line-height));
     }
   }
+}
+@property --tw-translate-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
 }
 @property --tw-border-style {
   syntax: "*";
@@ -856,6 +856,9 @@
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
+      --tw-translate-x: 0;
+      --tw-translate-y: 0;
+      --tw-translate-z: 0;
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
