--- a/src/input.css
+++ b/src/input.css
@@ -2,8 +2,18 @@
 
 * {
     font-family: "Roboto", sans-serif;
+    scroll-padding-top: 50px;
 }
-/* Add this to your head or CSS file*/
+/* Location Section*/
+ /* change the pagination backroud color*/
+  .splide__pagination .splide__pagination__page {
+    background-color: #1f2937 ;
+  }
+
+  .splide__pagination .splide__pagination__page.is-active {
+    background-color: #d1d5db; 
+  }
+/* Pricing Section*/
 .glow-card {
   position: relative;
   overflow: hidden;
