--- a/src/input.css
+++ b/src/input.css
@@ -4,6 +4,15 @@
     font-family: "Roboto", sans-serif;
     scroll-padding-top: 50px;
 }
+
+/* POP OUT form*/
+  /* removing number arrows (spinners) */
+  input[type=number]::-webkit-inner-spin-button,
+  input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
 /* Location Section*/
  /* change the pagination backroud color*/
   .splide__pagination .splide__pagination__page {
@@ -13,6 +22,10 @@
   .splide__pagination .splide__pagination__page.is-active {
     background-color: #d1d5db; 
   }
+
+
+
+
 /* Pricing Section*/
 .glow-card {
   position: relative;
